# MultiModal_PointCloud_Segmentation_for_Offroad

./: README.md
src/Feature Extraction/: pc_ext.cpp  pc_ext.ipynb  pc_ext.py  pc_imu_graph.ipynb  surface_roughness_viz.ipynb
src/gazebo_world/: CMakeLists.txt  make_png.py  package.xml
src/gazebo_world/launch/: sin_wave.launch
src/gazebo_world/models/sin_wave/: model.config  model.sdf
src/gazebo_world/src/: SinWavePlugin.cc
src/gazebo_world/worlds/: sin_wave.world
src/gazebo_world/worlds/materials/scripts/: sin_wave.material
src/imu_receiver/: CMakeLists.txt  package.xml
src/imu_receiver/src/: imu_data_logger.cpp
src/lidar_image_projection/: CMakeLists.txt
src/lidar_image_projection/config/: kitti_camera_color_left.yaml  pylon_camera.yaml
src/lidar_image_projection/launch/: lidar_image_projection_node.launch
src/lidar_image_projection/result/: C_T_L.txt
src/lidar_image_projection/src/: Image.cpp  crop_by_angle.cpp  lidar_image_projection_crop.cpp  lidar_image_projection_node.cpp  save_topic.cpp
src/pcl_cpp_tutorial/: CMakeLists.txt  package.xml
src/pcl_cpp_tutorial/src/: color_filter.cpp  example.cpp  ply_to_pcd.cpp  ply_to_txt.cpp
src/sine_wave_world/: CMakeLists.txt  make_png.py  package.xml
src/sine_wave_world/launch/: sine_wave.launch
src/sine_wave_world/worlds/: sine_wave.sdf
src/topic_save/: CMakeLists.txt  package.xml
src/topic_save/src/: data_saver.cpp  save_data.cpp  tf_vel.cpp  topic_save.cpp  vel_publisher.cpp  velocity_publisher.cpp
